Codespaces: set Apache DocumentRoot to CHRISYSTEMATIXX and enable rewrite

--- a/.devcontainer/web/Dockerfile
+++ b/.devcontainer/web/Dockerfile
@@ -9,5 +9,8 @@ COPY apache.conf /etc/apache2/conf-enabled/z-dev.conf
 # Enable Apache rewrite module for .htaccess support
 RUN a2enmod rewrite
 
+# Use the project subfolder as the web root
+COPY 000-default.conf /etc/apache2/sites-available/000-default.conf
+
 # Default Apache listens on 80; docker-compose will map to 8080 on host
 EXPOSE 80
